🐛 Fix nav overflow issue

--- a/themes/hansott/src/scss/custom.scss
+++ b/themes/hansott/src/scss/custom.scss
@@ -63,3 +63,7 @@ main {
         font-size: 1.25rem;
     }
 }
+
+.nav-left {
+    overflow: inherit;
+}
